--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,16 @@
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:layout_marginBottom="150dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/gridLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"/>
 
@@ -41,7 +43,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:layout_row="2"
-            android:text="Button"/>
+            android:text="2 Word Animal"/>
 
         <Button
             android:id="@+id/threeWordAnimal"
@@ -53,7 +55,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:layout_row="2"
-            android:text="Button"/>
+            android:text="3 Word Animal"/>
 
         <Button
             android:id="@+id/twoWordObject"
@@ -65,7 +67,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:layout_row="1"
-            android:text="Button"/>
+            android:text="2 Word Team"/>
 
         <Button
             android:id="@+id/threeWordObject"
@@ -77,7 +79,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:layout_row="1"
-            android:text="Button"/>
+            android:text="3 Word Team"/>
     </GridLayout>
 
     <android.support.constraint.Guideline
