--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_light"
     tools:context="com.chris.atchley.nameyourteam.MainActivity">
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="61dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="100dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="28sp"
@@ -22,47 +23,6 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"/>
 
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
-
-        <Button
-            android:id="@+id/twoWordAnimal"
-            style="@style/button"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:text="2 Word Animal"/>
-
-        <Button
-            android:id="@+id/threeWordAnimal"
-            style="@style/button"
-            android:layout_column="2"
-            android:layout_row="2"
-            android:text="3 Word Animal"/>
-
-        <Button
-            android:id="@+id/twoWordObject"
-            style="@style/button"
-            android:layout_column="1"
-
-            android:layout_row="1"
-            android:text="2 Word Team"/>
-
-        <Button
-            android:id="@+id/threeWordObject"
-            style="@style/button"
-            android:layout_column="2"
-            android:layout_row="1"
-            android:text="3 Word Team"/>
-    </GridLayout>
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -71,5 +31,65 @@
         app:layout_constraintGuide_begin="20dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="20dp"/>
+
+    <GridLayout
+        android:id="@+id/gridLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.925">
+
+        <Button
+            android:id="@+id/threeWordObject"
+            style="@style/button"
+            android:layout_column="2"
+            android:layout_row="2"
+            android:text="3 Word Team"
+            tools:layout_editor_absoluteX="187dp"
+            tools:layout_editor_absoluteY="399dp"/>
+
+        <Button
+            android:id="@+id/twoWordObject"
+            style="@style/button"
+            android:layout_column="2"
+
+            android:layout_row="1"
+            android:text="2 Word Team"/>
+    </GridLayout>
+
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1">
+
+        <CheckBox
+            android:id="@+id/colerCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:paddingRight="20dp"
+            android:text="Add A Color"/>
+
+        <CheckBox
+            android:id="@+id/animalCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:text="Force Animal Name"/>
+
+    </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
